--- a/index.html
+++ b/index.html
@@ -21,29 +21,76 @@
         width: 100vw;
         height: 100vh;
       }
-      .hint {
+
+      #errBox {
         position: fixed;
-        left: 14px;
-        bottom: 12px;
-        color: rgba(210, 245, 255, 0.65);
-        font-size: 12px;
-        letter-spacing: 0.2px;
-        user-select: none;
+        top: 18px;
+        left: 50%;
+        transform: translate(-50%, -10px);
+        width: min(560px, calc(100vw - 32px));
+        box-sizing: border-box;
+        padding: 12px 14px;
+        border-radius: 14px;
+        background: rgba(60, 0, 0, 0.62);
+        border: 1px solid rgba(255, 90, 90, 0.9);
+        border-left: 6px solid rgba(255, 60, 60, 1);
+        color: #fff;
+        box-shadow: 0 14px 40px rgba(0, 0, 0, 0.65);
+        opacity: 0;
         pointer-events: none;
-        text-shadow: 0 0 14px rgba(130, 240, 255, 0.35);
+        z-index: 9999;
+        transition: opacity 180ms ease, transform 180ms ease;
+        backdrop-filter: blur(10px);
       }
-      .hint kbd {
-        padding: 2px 6px;
-        border-radius: 6px;
-        border: 1px solid rgba(160, 240, 255, 0.25);
-        background: rgba(0, 40, 50, 0.35);
-        box-shadow: 0 0 18px rgba(130, 240, 255, 0.12);
+      #errBox.show {
+        opacity: 1;
+        transform: translate(-50%, 0);
+        pointer-events: auto;
+      }
+      #errBox .row {
+        display: flex;
+        gap: 12px;
+        align-items: flex-start;
+      }
+      #errBox .icon {
+        width: 18px;
+        height: 18px;
+        margin-top: 2px;
+        flex: none;
+      }
+      #errBox .title {
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.15;
+        margin: 0 0 4px 0;
+      }
+      #errBox .msg {
+        font-size: 13px;
+        line-height: 1.35;
+        opacity: 0.9;
+        margin: 0;
       }
     </style>
   </head>
   <body>
     <canvas id="c"></canvas>
-    <div class="hint">Nhấn <kbd>Space</kbd> để tạm dừng/tiếp tục</div>
+
+    <div id="errBox" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="row">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+          <path fill="currentColor" d="M11 7h2v7h-2V7zm0 9h2v2h-2v-2z" />
+          <path
+            fill="currentColor"
+            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16z"
+          />
+        </svg>
+        <div>
+          <div class="title">Lỗi</div>
+          <p class="msg">Không thể hoàn tất tạo hình trái tim.</p>
+        </div>
+      </div>
+    </div>
+
     <script>
       (() => {
         "use strict";
@@ -61,6 +108,7 @@
           window.matchMedia("(prefers-reduced-motion: reduce)").matches;
 
         const canvas = document.getElementById("c");
+        const errBox = document.getElementById("errBox");
         const ctx = canvas.getContext("2d", { alpha: false, desynchronized: true });
 
         const bgCanvas = document.createElement("canvas");
@@ -95,9 +143,10 @@
         const SEED = (Date.now() ^ ((Math.random() * 1e9) | 0)) >>> 0;
         const rng = mulberry32(SEED);
 
+        // Tuned to match `heart.mp4`: black background + subtle bloom (avoid white blowout).
         const BLOOM = {
-          down: prefersReducedMotion ? 0.72 : 0.55,
-          intensity: prefersReducedMotion ? 0.55 : 0.95,
+          down: prefersReducedMotion ? 0.8 : 0.68,
+          intensity: prefersReducedMotion ? 0.22 : 0.32,
         };
 
         function makeGlowSprite(size, inner, mid, outer) {
@@ -116,16 +165,18 @@
           return c;
         }
 
+        // Smaller / dimmer sprites keep particles visible (like the reference video)
+        // instead of becoming a solid glowing blob.
         const spriteDot = makeGlowSprite(
-          64,
-          "rgba(220, 255, 255, 1)",
-          "rgba(140, 240, 255, 0.6)",
-          "rgba(0, 160, 220, 0)"
+          28,
+          "rgba(255, 255, 255, 1)",
+          "rgba(160, 240, 255, 0.55)",
+          "rgba(0, 150, 220, 0)"
         );
         const spriteHot = makeGlowSprite(
-          96,
-          "rgba(240, 255, 255, 1)",
-          "rgba(120, 235, 255, 0.7)",
+          52,
+          "rgba(255, 255, 255, 1)",
+          "rgba(140, 235, 255, 0.55)",
           "rgba(0, 140, 210, 0)"
         );
 
@@ -156,12 +207,39 @@
         const PARTICLE_COUNT = prefersReducedMotion ? 900 : 3600;
         const HEART_POINTS = makeHeartPoints(PARTICLE_COUNT);
 
+        // Match the reference clip duration (~20.6s) and pacing.
         const PHASE = {
-          cycleMs: prefersReducedMotion ? 14000 : 21000,
-          buildMs: prefersReducedMotion ? 3500 : 6500,
-          holdMs: prefersReducedMotion ? 6500 : 9500,
-          disperseMs: prefersReducedMotion ? 4000 : 5000,
+          cycleMs: prefersReducedMotion ? 14000 : 20600,
+          buildMs: prefersReducedMotion ? 3400 : 6000,
+          holdMs: prefersReducedMotion ? 6200 : 9800,
+          disperseMs: prefersReducedMotion ? 4400 : 4800,
         };
+
+
+        const ERR_TOAST = {
+          triggerK: 0.3,
+        };
+
+        let halted = false;
+
+        function setErrorVisible(v) {
+          if (!errBox) return;
+          errBox.classList.toggle("show", v);
+        }
+
+        function haltAll() {
+          if (halted) return;
+          halted = true;
+          setErrorVisible(true);
+        }
+
+        function updateErrorToast(tMs, ph) {
+          if (halted) return;
+          if (ph.name === "build" && ph.k >= ERR_TOAST.triggerK) {
+            haltAll();
+          }
+        }
+
 
         function rebuildBackground() {
           const { w, h } = state;
@@ -170,45 +248,6 @@
           bgCtx.setTransform(1, 0, 0, 1, 0, 0);
 
           bgCtx.fillStyle = "#000";
-          bgCtx.fillRect(0, 0, w, h);
-
-          const cx = w * 0.5;
-          const cy = h * 0.42;
-          const r = Math.max(w, h) * 0.78;
-          const g = bgCtx.createRadialGradient(cx, cy, 0, cx, cy, r);
-          g.addColorStop(0, "rgba(0, 52, 72, 0.55)");
-          g.addColorStop(0.35, "rgba(0, 24, 36, 0.22)");
-          g.addColorStop(1, "rgba(0, 0, 0, 1)");
-          bgCtx.fillStyle = g;
-          bgCtx.fillRect(0, 0, w, h);
-
-          const starRng = mulberry32((SEED ^ 0xdecafbad) >>> 0);
-          const starCount = prefersReducedMotion ? 140 : Math.floor(220 + Math.min(w, h) * 0.1);
-          bgCtx.save();
-          bgCtx.globalCompositeOperation = "screen";
-          for (let i = 0; i < starCount; i++) {
-            const x = starRng() * w;
-            const y = starRng() * h;
-            const rr = 0.35 + Math.pow(starRng(), 2.7) * 1.9;
-            const a = 0.04 + Math.pow(starRng(), 1.85) * 0.36;
-            bgCtx.fillStyle = `rgba(180, 245, 255, ${a})`;
-            bgCtx.beginPath();
-            bgCtx.arc(x, y, rr, 0, TAU);
-            bgCtx.fill();
-          }
-          bgCtx.restore();
-
-          const vig = bgCtx.createRadialGradient(
-            w * 0.5,
-            h * 0.5,
-            Math.min(w, h) * 0.2,
-            w * 0.5,
-            h * 0.5,
-            Math.max(w, h) * 0.92
-          );
-          vig.addColorStop(0, "rgba(0,0,0,0)");
-          vig.addColorStop(1, "rgba(0,0,0,0.88)");
-          bgCtx.fillStyle = vig;
           bgCtx.fillRect(0, 0, w, h);
         }
 
@@ -227,9 +266,11 @@
           state.dpr = dpr;
           state.scale = Math.min(w, h) / 58;
           state.heartCx = w * 0.5;
-          state.heartCy = h * 0.38;
+          // Place the heart higher (closer to the reference video framing).
+          state.heartCy = h * 0.26;
           state.baseCx = state.heartCx;
-          state.baseCy = h * 0.74;
+          // Energy base sits lower in the reference.
+          state.baseCy = h * 0.88;
 
           bloomCanvas.width = Math.max(1, Math.floor(w * BLOOM.down));
           bloomCanvas.height = Math.max(1, Math.floor(h * BLOOM.down));
@@ -244,7 +285,10 @@
           requestedReset = true;
         }
 
-        window.addEventListener("resize", computeLayout, { passive: true });
+        window.addEventListener("resize", () => {
+          if (halted) return;
+          computeLayout();
+        }, { passive: true });
         computeLayout();
 
         function placeOnBase(p, tMs) {
@@ -294,8 +338,8 @@
             py: 0,
             vx: 0,
             vy: 0,
-            size: 0.75 + rng() * 1.7,
-            brightness: 0.65 + rng() * 0.55,
+            size: 0.45 + rng() * 0.95,
+            brightness: 0.32 + rng() * 0.6,
             twinkle: rng() * TAU,
             baseAngle: rng() * TAU,
             baseRadius: rng(),
@@ -330,7 +374,7 @@
           phase = ensurePhase(phase, tMs);
           const { baseCx, baseCy, scale } = state;
           const pulse = 1 + 0.06 * Math.sin(tMs * 0.0022);
-          const r = scale * (mode === "bloom" ? 13.6 : 12.5) * pulse;
+          const r = scale * (mode === "bloom" ? 12.2 : 11.1) * pulse;
 
           const intensity = phase.name === "disperse" ? 1 - phase.k * 0.65 : 1;
           const gain = mode === "bloom" ? 1.25 : 1;
@@ -342,9 +386,9 @@
           g.translate(baseCx, baseCy);
           g.scale(2.35, 0.75);
           const grad = g.createRadialGradient(0, 0, 0, 0, 0, r);
-          grad.addColorStop(0, `rgba(200, 255, 255, ${0.92 * intensity * gain})`);
-          grad.addColorStop(0.24, `rgba(120, 242, 255, ${0.48 * intensity * gain})`);
-          grad.addColorStop(0.78, `rgba(40, 200, 255, ${0.16 * intensity * gain})`);
+          grad.addColorStop(0, `rgba(210, 255, 255, ${0.55 * intensity * gain})`);
+          grad.addColorStop(0.24, `rgba(130, 242, 255, ${0.26 * intensity * gain})`);
+          grad.addColorStop(0.78, `rgba(40, 200, 255, ${0.08 * intensity * gain})`);
           grad.addColorStop(1, "rgba(0, 0, 0, 0)");
           g.fillStyle = grad;
           g.beginPath();
@@ -352,15 +396,15 @@
           g.fill();
           g.restore();
 
-          const ringCount = prefersReducedMotion ? 9 : mode === "bloom" ? 12 : 26;
-          const ringAlpha = (mode === "bloom" ? 0.09 : 0.07) * (1 - phase.k * 0.35);
+          const ringCount = prefersReducedMotion ? 8 : mode === "bloom" ? 10 : 18;
+          const ringAlpha = (mode === "bloom" ? 0.06 : 0.05) * (1 - phase.k * 0.35);
           g.lineCap = "round";
           for (let i = 0; i < ringCount; i++) {
             const a0 = tMs * 0.00125 + (i / ringCount) * TAU;
             const a1 = a0 + (0.35 + 0.45 * Math.sin(tMs * 0.0015 + i)) * 0.92;
             const rr = r * (1.12 + 0.24 * Math.sin(i * 9.2 + tMs * 0.001));
             g.strokeStyle = `rgba(160, 245, 255, ${ringAlpha})`;
-            g.lineWidth = mode === "bloom" ? 2.1 : 1.15;
+            g.lineWidth = mode === "bloom" ? 1.8 : 1.0;
             g.beginPath();
             g.ellipse(baseCx, baseCy, rr * 2.1, rr * 0.62, 0, a0, a1);
             g.stroke();
@@ -382,7 +426,7 @@
               : (1 - phase.k) * 0.42;
           if (intensity <= 0.001) return;
 
-          const count = mode === "bloom" ? 10 : 16;
+          const count = mode === "bloom" ? 8 : 12;
           const rx = scale * 22;
           const ry = scale * 6.7;
 
@@ -401,9 +445,9 @@
             const cxp = (sx + ex) * 0.5 + wob;
             const cyp = (sy + ey) * 0.5 - lift;
             const flick = 0.45 + 0.55 * Math.sin(i * 12.3 + tMs * 0.003);
-            const aLine = (mode === "bloom" ? 0.07 : 0.045) * intensity * (0.55 + 0.45 * flick);
+            const aLine = (mode === "bloom" ? 0.045 : 0.03) * intensity * (0.55 + 0.45 * flick);
             g.strokeStyle = `rgba(180, 250, 255, ${aLine})`;
-            g.lineWidth = mode === "bloom" ? 2.4 : 1.1;
+            g.lineWidth = mode === "bloom" ? 2.1 : 1.0;
             g.beginPath();
             g.moveTo(sx, sy);
             g.quadraticCurveTo(cxp, cyp, ex, ey);
@@ -417,11 +461,11 @@
           ctx.globalCompositeOperation = "source-over";
           let a =
             phase.name === "build"
-              ? lerp(0.24, 0.13, phase.k)
+              ? lerp(0.28, 0.18, phase.k)
               : phase.name === "hold"
-              ? 0.11
-              : lerp(0.11, 0.22, phase.k);
-          if (phase.name === "disperse") a += smoothstep(0.72, 1, phase.k) * 0.26;
+              ? 0.16
+              : lerp(0.16, 0.28, phase.k);
+          if (phase.name === "disperse") a += smoothstep(0.72, 1, phase.k) * 0.18;
           ctx.globalAlpha = a;
           ctx.drawImage(bgCanvas, 0, 0, state.w, state.h);
           ctx.globalAlpha = 1;
@@ -431,8 +475,10 @@
         let paused = false;
         let pauseAt = 0;
         let startAt = performance.now();
+        let rafId = 0;
 
         window.addEventListener("keydown", (e) => {
+          if (halted) return;
           if (e.code !== "Space") return;
           e.preventDefault();
           paused = !paused;
@@ -441,8 +487,9 @@
         });
 
         function step(now) {
+          if (halted) return;
           if (paused) {
-            requestAnimationFrame(step);
+            rafId = requestAnimationFrame(step);
             return;
           }
 
@@ -457,9 +504,12 @@
           }
           lastT = ph.t;
 
+          updateErrorToast(tMs, ph);
+          if (halted) return;
+
           backgroundFade(ph, tMs);
           bloomCtx.globalCompositeOperation = "source-over";
-          const bloomFade = ph.name === "hold" ? 0.18 : ph.name === "build" ? 0.14 : 0.28;
+          const bloomFade = ph.name === "hold" ? 0.36 : ph.name === "build" ? 0.32 : 0.42;
           bloomCtx.fillStyle = `rgba(0,0,0,${bloomFade})`;
           bloomCtx.fillRect(0, 0, state.w, state.h);
 
@@ -539,12 +589,12 @@
             if (alpha <= 0.001) continue;
 
             const speed = Math.hypot(p.x - p.px, p.y - p.py);
-            if (!prefersReducedMotion && speed > 1.15 && (p.scatter < 0.38 || speed > 2.4)) {
-              const len = Math.min(26, speed * 6.4);
+            if (!prefersReducedMotion && speed > 1.15 && (p.scatter < 0.38 || speed > 2.35)) {
+              const len = Math.min(86, speed * 14);
               const inv = 1 / (speed || 1);
               const dx = (p.x - p.px) * inv;
               const dy = (p.y - p.py) * inv;
-              const a = Math.min(0.55, alpha * (0.055 + speed * 0.018));
+              const a = Math.min(0.35, alpha * (0.04 + speed * 0.012));
               ctx.strokeStyle = `rgba(170, 245, 255, ${a})`;
               ctx.lineWidth = 1;
               ctx.beginPath();
@@ -552,12 +602,12 @@
               ctx.lineTo(p.x - dx * len, p.y - dy * len);
               ctx.stroke();
 
-              if (speed > 2.35) {
+              if (speed > 2.2) {
                 bloomCtx.strokeStyle = `rgba(150, 240, 255, ${Math.min(
-                  0.16,
-                  alpha * 0.07 * (speed - 1)
+                  0.12,
+                  alpha * 0.05 * (speed - 1)
                 )})`;
-                bloomCtx.lineWidth = 2.8;
+                bloomCtx.lineWidth = 2.4;
                 bloomCtx.beginPath();
                 bloomCtx.moveTo(p.x, p.y);
                 bloomCtx.lineTo(p.x - dx * len, p.y - dy * len);
@@ -568,15 +618,15 @@
             const tw = 0.85 + 0.15 * Math.sin(tMs * 0.007 + p.twinkle);
             const drawSize = p.size * (0.9 + 0.35 * tw);
             const sprite = ph.name === "build" && p.reveal < 0.55 ? spriteDot : spriteHot;
-            const s = (sprite.width / 2) * drawSize * 0.35;
+            const s = (sprite.width / 2) * drawSize * 0.16;
 
-            ctx.globalAlpha = Math.min(1, alpha);
+            ctx.globalAlpha = Math.min(1, alpha * 0.75);
             ctx.drawImage(sprite, p.x - s, p.y - s, s * 2, s * 2);
 
             const bloomA =
-              ph.name === "hold" ? alpha * 0.7 : ph.name === "build" ? alpha * 0.55 : alpha * 0.45;
-            if (bloomA > 0.035) {
-              const hs = (spriteHot.width / 2) * drawSize * 0.62;
+              ph.name === "hold" ? alpha * 0.5 : ph.name === "build" ? alpha * 0.4 : alpha * 0.34;
+            if (bloomA > 0.03) {
+              const hs = (spriteHot.width / 2) * drawSize * 0.28;
               bloomCtx.globalAlpha = Math.min(1, bloomA);
               bloomCtx.drawImage(spriteHot, p.x - hs, p.y - hs, hs * 2, hs * 2);
             }
@@ -588,8 +638,8 @@
           ctx.save();
           ctx.globalCompositeOperation = "screen";
           if (!prefersReducedMotion) {
-            ctx.globalAlpha = BLOOM.intensity * 0.65;
-            ctx.filter = "blur(10px)";
+            ctx.globalAlpha = BLOOM.intensity * 0.55;
+            ctx.filter = "blur(7px)";
             ctx.drawImage(bloomCanvas, 0, 0, state.w, state.h);
             ctx.filter = "none";
           }
@@ -597,12 +647,12 @@
           ctx.drawImage(bloomCanvas, 0, 0, state.w, state.h);
           ctx.restore();
 
-          requestAnimationFrame(step);
+          rafId = requestAnimationFrame(step);
         }
 
         ctx.fillStyle = "#000";
         ctx.fillRect(0, 0, 1, 1);
-        requestAnimationFrame(step);
+        rafId = requestAnimationFrame(step);
       })();
     </script>
   </body>
